adding particles and typed js

--- a/index.html
+++ b/index.html
@@ -46,15 +46,27 @@
 
 
     <section id="banner-part">
+        <canvas class="canvas"></canvas>
         <img src="images/pexels-mohamed-abdelghaffar-771742-removebg-preview.png" alt="man">
         <div class="overlay">
+
             <div class="container">
-                <h3>Hi there, I'm sobahan.</h3>
-                <h1> Design is thinking made visual <span>. . . .</span> </h1>
+
+                <span id="typed-string"></span>
+                <div id="typed">
+                    <h3>Hi there, I'm sobahan</h3>
+                    <h1> "Design is thinking made visual <strong>. . . ."</strong> </h1>
+                </div>
+
+
                 <h4>Build Climber and Train Stopper</h4>
-                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
-                    work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for
+                    that
+                    work. That's why I am learning and mastering web development. I will not stop until I become the
+                    Web
                     Development Hero.</p>
+
+
                 <div class="btn">
                     <a target="_blank" href="https://www.linkedin.com/in/md-sobahan-mia-04a4a9211/">HIRE ME</a>
                 </div>
@@ -62,18 +74,23 @@
                     <a target="_blank" href="https://www.facebook.com/iamsobahan/">CONTACT</a>
                 </div>
 
-            </div>
-            <div class="icon">
-                <a target="_blank" href="https://github.com/iamsobahan"><i class="fab fa-github"></i></a>
-                <a target="_blank" href="https://www.facebook.com/iamsobahan/"><i class="fab fa-facebook-f"></i></a>
-                <a target="_blank" href="https://twitter.com/iamsobahan"><i class="fab fa-twitter"></i></a>
-                <a target="_blank" href="https://www.linkedin.com/in/md-sobahan-mia-04a4a9211/"><i
-                        class="fab fa-linkedin-in"></i></a>
-                <a target="_blank" href="https://www.instagram.com/iamsobahan/"><i class="fab fa-instagram"></i></a>
 
+                <div class="icon">
+                    <a target="_blank" href="https://github.com/iamsobahan"><i class="fab fa-github"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/iamsobahan/"><i class="fab fa-facebook-f"></i></a>
+                    <a target="_blank" href="https://twitter.com/iamsobahan"><i class="fab fa-twitter"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/md-sobahan-mia-04a4a9211/"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/iamsobahan/"><i class="fab fa-instagram"></i></a>
+
+                </div>
             </div>
+
         </div>
+
     </section>
+
+
 
     <section id="about-part">
         <div class="container">
@@ -149,6 +166,11 @@
     </section>
 
     <p class="footer">© Web hunter 2021, a Programming Hero initiative.</p>
+    <script src="script/jquery-1.12.4.min.js"></script>
+
+    <script src="script/typed.min.js"></script>
+    \<script src="script/jquery.particles.js"></script>
+    <script src="script/script.js"></script>
 
 </body>
 
